# subtitles_translator

./: README.md  english_doc.md  setup.cfg  setup.py
srt/: tzuyu_secret_friend.srt
subtitle/: action.py  ffmpeg_utils.py  main.py  type.py  utils.py  whisper_model.py
test/: FunctionTest.py  TranslateTest.py  config.py
test/srt/: tzuyu_20.srt
