[metadata]
name = subtitle
version = attr: subtitle.__version__
license = Apache Software License
description = Generate translated subtitles for video
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.9
